--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           <div class="row">
             <div class="col text-center">
               <small class="block">
-                &copy; @2025 LuhDe Resepsi. All Right Reserved. 
+                &copy; ©2025 LuhDe Resepsi. All Right Reserved. 
               </small>
               <small class="block">
                 Design by <a href="https://instagram.com/agastyamahadipta">@AgastyaMahadipta</a>  
